# mmd-tools

./: .clang_complete  CMakeLists.txt  LICENSE
example/: main.cc  vmd.cc
include/mmd/: common.hpp  fs.hpp  pmx.hpp  vmd.hpp
include/mmd/pmx/: bone.hpp  display.hpp  header.hpp  joint.hpp  material.hpp  mesh.hpp  morph.hpp  rigid.hpp  texture.hpp
include/mmd/vmd/: face.hpp  header.hpp  keyframe.hpp
src/: ext.hpp  log.hpp  pmx.cc  stream.cc  stream.hpp  vmd.cc
src/pmx/: bone.cc  display.cc  header.cc  joint.cc  material.cc  mesh.cc  morph.cc  rigid.cc  texture.cc
src/vmd/: face.cc  header.cc  keyframe.cc
